--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
     ],
     "github.copilot.enable": {
         "markdown": "true"
-    }
+    },
+    "files.associations": {
+        "*.css": "tailwindCSS"
+    },
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
