Add Uploadthing functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "tailwindcss",
         "topnav",
         "trpc",
+        "Uploadthing",
         "upstash"
     ],
     "github.copilot.enable": {
