add upstash ratelimiting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "clsx",
         "databard",
         "lucide",
+        "Ratelimit",
         "Ratelimiting",
         "sonner",
         "tailwindcss",
